<resources>
    <string name="app_name">Car Loan Calculator</string>
    <string name="carPrice">Car Price :</string>
    <string name="DownPayment">Down Payment Amount :</string>
    <string name="loanPeriod">Loan Period (Year) :</string>
    <string name="interestRate">Interest Rate :</string>
    <string name="Developer">Develop by Lim Yong Yi</string>
    <string name="Calculate">Calculate</string>
    <string name="DisplayCarLoan">Car Loan :</string>
    <string name="interest">Interest :</string>
    <string name="monthlyRepayment">Monthly Repayment :</string>
</resources>
